[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["joel ivongbe <engrjoelivon@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
firebase-admin = "^6.5.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
